2018-09-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc-newpoppler.cc: Add a comment that it works upto
	the poppler 0.69.0.
	* pdftoepdf-poppler0.68.0.cc: Rename pdftoepdf-newpoppler.cc
	and add comments.
	* pdftoepdf-poppler0.69.0.cc: A new file for poppler-0.69.0
	and newer.

2018-09-18  Nick Roessler  <nicholas.e.roessler@gmail.com>

	* writet1.c (t1_check_unusual_charstring): protect against buffer
	overflow.

2018-09-09  Karl Berry  <karl@tug.org>

	* expanded.test,
	* ttf2afm.test: LC_ALL=LANGUAGE=C.

2018-07-09  Karl Berry  <karl@freefriends.org>

	* writefont.c (write_fontdescriptor) [ENABLE_PDF_CHARSET]:
	compile-time conditional for re-enabling output of PDF /CharSet,
	which is now disabled by default.

2018-06-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexlib.h: Output correct Unicode strings on console
	(w32 only).

2018-06-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: Free unused memory (w32 only).

2018-06-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: Remove xfree(file_name) in order to avoid
	to output garbage.
	* pdftoepdf-newpoppler.cc: Remove _WIN32 changes, since
	utf-8 names are transformed to Unicode and _wopened
	in poppler.

2018-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexlib.h, pdftoepdf.cc, pdftoepdf-newpoppler.cc:
	Allow non-ascii file names for pdfTeX with UTF-8 source files
	(w32 only). The function is enabled by setting
	'command_line_encoding=utf-8' in texmf.cnf.

2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexlib.h: Discard the changes on 2018-05-11, since
	'command_line_encoding=utf-8' is not so natural for
	pdfTeX (w32 only).

2018-05-13  Joseph Wright  <joseph.wright@morningstar2.co.uk>

	* pdftex.web: New primitive \expanded based on original
	  suggestion by Heiko Oberdiek, and with work by
	  Bruno Le Floch and David Carlisle (on behalf of The LaTeX Project).
        (expanded_code): new @d, new cases.