@@ -1,3 +1,7 @@
+2018-10-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* pdftoepdf.cc: Remove changes for w32.
+
 2018-09-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* pdftosrc-newpoppler.cc: Add a comment that it works upto
